# PlanetoidGen

./: .gitmodules  LICENSE  README.md
libs/: .dockerignore  .editorconfig
libs/PlanetoidGen.Client/: .gitignore  README.md
libs/PlanetoidGen.Client/Assets/: Terrain Cpp.asset  Terrain Ours.asset
libs/PlanetoidGen.Client/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  TagManager.asset
libs/PlanetoidGen.Core/: PlanetoidGen.Core.sln  README.md
libs/PlanetoidGen.Database/: README.md
libs/PlanetoidGen.Database/create/: create_database.sql
libs/PlanetoidGen.Database/test/: jobs.sql  (+4 more)
libs/PlanetoidGen.Server/: .gitignore  PlanetoidGen.Server.sln  README.md
libs/PlanetoidGen.Tests.Cpp/: .gitignore  CMakeLists.txt  README.md  benchmark.ps1  benchmark_internal.bat
libs/PlanetoidGen.Tests.Cpp/app/: CMakeLists.txt
libs/PlanetoidGen.Tests.Cpp/app/include/: ErosionAgent.h  HillAgent.h  Lake.h  WaterModel.h  WaterNode.h  action.h  arglist.h  cultural.h  culture_data.h  executive.h  heightmap.h  image.h  index.h  logger.h  map.h  params.h  point.h  pointset.h
libs/PlanetoidGen.Tests.Cpp/app/include/Agents/: MountainAgent.h  RiverAgent.h  ShoreLineAgent.h  SmoothAgent.h  agent.h
libs/PlanetoidGen.Tests.Cpp/app/include/TerrainOps/: TerrainOp.h  Widener.h
libs/PlanetoidGen.Tests.Cpp/app/src/: ErosionAgent.cc  HillAgent.cc  Lake.cc  WaterModel.cc  WaterNode.cc  action.cc  arglist.cc  cultural.cc  executive.cc  heightmap.cc  image.cc  index.cc  logger.cc  main.cc  map.cc  params.cc  point.cc  pointset.cc
libs/PlanetoidGen.Tests.Cpp/app/src/Agents/: MountainAgent.cc  RiverAgent.cc  ShoreLineAgent.cc  SmoothAgent.cc
libs/PlanetoidGen.Tests.Cpp/app/src/TerrainOps/: TerrainOp.cc  Widener.cc
tools/: mongo_download.py
(+436 files in other folders)
